--- a/index.html
+++ b/index.html
@@ -44,8 +44,35 @@
         <div id="recommend-ext">
             <h2>编辑推荐Chrome插件</h2>
 
-            <ul class="recommend-detial">
+            <ul class="recommend-detial" id="content">
+                <script>
+                    var str = ""
+                    for ( var i=0;i<10;i++) {
+                        str += `
+                        <li class="recommend-item">
 
+                    <div class="recommend-itemname">
+                        <span class="recommend-logo"><img src="photp/ia_100000019.png"></span>
+                        <div class="recommend-itemright">
+                            <p>Infinity新标签页(pro)</p>
+                            <ul class="recommend-itemgrade">
+                                <span class="grade"><img src="photp/xing.png"></span>
+                                <span class="grade"><img src="photp/xing.png"></span>
+                                <span class="grade"><img src="photp/xing.png"></span>
+                                <span class="grade"><img src="photp/xing.png"></span>
+                                <span class="grade"><img src="photp/xing.png"></span>
+                            </ul>
+                        </div>
+
+                    </div>
+                    <div class="recommend-itemintro">
+                        <p>Infinity新标签页Pro让你可以自定义的新标签页</p>
+                    </div>
+                </li>
+                        `   
+                    }
+                  document.getElementById("content").innerHTML = str
+                </script>
                 <li class="recommend-item">
 
                     <div class="recommend-itemname">
