去掉了id=udata旁边的逗号

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <div class="viewPager-left"><span><img src="photp/1.1.png"></span></div>
         <div class="viewPager-right">
             <ul>
-                <li><img style="border-radius: 0 8px 0 0" ; src="photp/ia_100001040.png"></li>
+                <li><img style="border-radius: 0 8px 0 0;" src="photp/ia_100001040.png"></li>
                 <li><img src="photp/ia_100001040.png"></li>
-                <li><img style="border-radius: 0 0 8px 0" ; src="photp/ia_100001040.png"></li>
+                <li><img style="border-radius: 0 0 8px 0;" src="photp/ia_100001040.png"></li>
             </ul>
         </div>
     </div>
@@ -44,8 +44,9 @@
         <div id="recommend-ext">
             <h2>编辑推荐Chrome插件</h2>
 
-
-            <ul class="recommend-detial" ,id="udata"></ul>
+            <h1>此这里开始</h1>
+            <ul class="recommend-detial" id="udata"></ul>
+            <h1>从这里结束</h1>
             <ul class="recommend-detial" id="content">
                 <script>
                     var str = ""
@@ -75,7 +76,7 @@
                     }
                     document.getElementById("content").innerHTML = str
                 </script>
-                <li class="recommend-item">
+                
 
                     <script>
                         var recomm = new XMLHttpRequest();
